--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -188,4 +188,4 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["webknossos*", "webknossos/version.py"]
-exclude = ["webknossos.tests"]
+exclude = ["webknossos.tests", "webknossos/testdata/**"]
