--- a/webknossos/tests/cassettes/test_url_download[l4_sample/view].yml
+++ b/webknossos/tests/cassettes/test_url_download[l4_sample/view].yml
@@ -21,13 +21,13 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 16 Oct 2024 13:25:21 GMT
+        date: Thu, 24 Oct 2024 12:41:54 GMT
         content-type: application/json
         content-length: '1410'
       body:
         encoding: utf8
         data: >-
-          {"name":"l4_sample","dataSource":{"id":{"name":"l4_sample","team":"Organization_X"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint8","defaultViewConfiguration":{"color":[255,0,0]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint32","largestSegmentId":2504697}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"allowedTeamsCumulative":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"isActive":true,"isPublic":false,"description":null,"displayName":null,"created":1508495293789,"isEditable":true,"lastUsedByUser":1729085122000,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1508495293789,"details":null,"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":0}
+          {"name":"l4_sample","dataSource":{"id":{"name":"l4_sample","team":"Organization_X"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint8","defaultViewConfiguration":{"color":[255,0,0]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint32","largestSegmentId":2504697}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"allowedTeamsCumulative":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"isActive":true,"isPublic":false,"description":null,"displayName":null,"created":1508495293789,"isEditable":true,"lastUsedByUser":1729773715097,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1508495293789,"details":null,"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":0}
         compression: none
   - request:
       method: POST
@@ -52,17 +52,17 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 16 Oct 2024 13:25:21 GMT
+        date: Thu, 24 Oct 2024 12:41:55 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"T85s5ei3ZASNuOPha0BMXQ"}'
+        data: '{"token":"sqAaCEkQgXfBm8Bp5VI-cQ"}'
         compression: none
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=1-1-1&x=3164&y=3212&z=1017&width=10&height=10&depth=7&token=T85s5ei3ZASNuOPha0BMXQ
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=1-1-1&x=3164&y=3212&z=1017&width=10&height=10&depth=7&token=sqAaCEkQgXfBm8Bp5VI-cQ
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -84,7 +84,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 16 Oct 2024 13:25:21 GMT
+        date: Thu, 24 Oct 2024 12:41:55 GMT
         content-type: application/octet-stream
         content-length: '700'
       body:
@@ -94,7 +94,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=1-1-1&x=3164&y=3212&z=1024&width=10&height=10&depth=3&token=T85s5ei3ZASNuOPha0BMXQ
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=1-1-1&x=3164&y=3212&z=1024&width=10&height=10&depth=3&token=sqAaCEkQgXfBm8Bp5VI-cQ
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -116,7 +116,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 16 Oct 2024 13:25:22 GMT
+        date: Thu, 24 Oct 2024 12:41:55 GMT
         content-type: application/octet-stream
         content-length: '300'
       body:
@@ -126,7 +126,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=1-1-1&x=3164&y=3212&z=1017&width=10&height=10&depth=7&token=T85s5ei3ZASNuOPha0BMXQ
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=1-1-1&x=3164&y=3212&z=1017&width=10&height=10&depth=7&token=sqAaCEkQgXfBm8Bp5VI-cQ
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -148,7 +148,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 16 Oct 2024 13:25:22 GMT
+        date: Thu, 24 Oct 2024 12:41:55 GMT
         content-type: application/octet-stream
         content-length: '2800'
       body:
@@ -158,7 +158,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=1-1-1&x=3164&y=3212&z=1024&width=10&height=10&depth=3&token=T85s5ei3ZASNuOPha0BMXQ
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=1-1-1&x=3164&y=3212&z=1024&width=10&height=10&depth=3&token=sqAaCEkQgXfBm8Bp5VI-cQ
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -180,7 +180,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 16 Oct 2024 13:25:22 GMT
+        date: Thu, 24 Oct 2024 12:41:56 GMT
         content-type: application/octet-stream
         content-length: '1200'
       body:
