--- a/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Tue, 29 Oct 2024 14:28:47 GMT
+        date: Thu, 07 Nov 2024 17:43:16 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"4uWDpiN-YnhWW-hWrLJWlA"}'
+        data: '{"token":"V_E8uJ0yPHT3M7YWuQN4yw"}'
         compression: none
