--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "attrs >=22.0.0",
     "boltons >=21.0.0",
     "cattrs >=22.0.0",
+    "certifi>=2023",
     "cluster-tools",
     "fsspec ~=2024.6.0",
     "httpx ~=0.27.0",
