--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,6 +152,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ["3.12", "3.11", "3.10", "3.9"]
+        group: [1, 2, 3]
       fail-fast: false
     defaults:
       run:
@@ -171,15 +172,24 @@ jobs:
               
       - name: Set up Python ${{ matrix.python-version }}
         run: uv python install ${{ matrix.python-version }}
+      
+      - name: Check formatting
+        if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
+        run: ./format.sh check
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+      - name: Lint code
+        if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
+        run: ./lint.sh
+
+      - name: Check typing
+        if: ${{ matrix.group == 1 && matrix.python-version == '3.11' }}
+        run: ./typecheck.sh
 
       - name: Python tests
         timeout-minutes: 30
         env:
           WK_TOKEN: ${{ secrets.WK_TOKEN }}
-        run: ./test.sh -vv -p no:faulthandler
+        run: ./test.sh -vv -p no:faulthandler --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
 
       - name: Check if git is dirty
         run: |
