Clean up executors (#1193)
* Clean up executors and make sequential executor truly synchronous.

Rename "test_pickling" to "multiprocessing_with_pickling" and "debug_sequential"
to "sequential_with_pickling". No longer use a multiprocessing pool of size 1
for "sequential" executor by replacing it with the former "debug_sequential" executor.

Clean up and speed up multiprocessing and non-scheduling executor tests.

* Remove MULTIPROCESSING_VIA_IO which was only needed for python <3.8

* Make Future forward references normal types

* Remove unused map_unordered methods

* Remove todo comment

* clean up tests some more

* Revert "Remove unused map_unordered methods"

This reverts commit f0b0dbe933be5877a1b34e616a3e1f428c279a4f.

* Reapply "Remove unused map_unordered methods"

This reverts commit 98929e8594b7ec847ff54f65ed2651f3f052e20d.

* Fix slurm test by indirectly parametrizing the tests. Also update pytest to the newest version.

* Fix linting and typing

* avoid flaky tests

* Apply suggestions from code review

Co-authored-by: Philipp Otto <philippotto@users.noreply.github.com>

* PR feedback: Add deprecation warning for renamed executor strategies. Try to combat test flakiness for slurm sleep tests

* update changelog

* Apply PR feedback for execution order tests

---------

Co-authored-by: Philipp Otto <philippotto@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,7 @@ jobs:
         if: ${{ matrix.executors == 'multiprocessing' }}
         run: |
           cd tests
-          PYTEST_EXECUTORS=multiprocessing,sequential,test_pickling,debug_sequential \
+          PYTEST_EXECUTORS=multiprocessing,sequential,multiprocessing_with_pickling,sequential_with_pickling \
             uv run --frozen python -m pytest -sv test_all.py test_multiprocessing.py
 
       - name: Run slurm tests
