Replace vcr-py for tests (#1198)
* Adapt test.sh to use proxay.

* wip replace vcr-py with proxy.

* working on formatting and cleaning responses.

* Add type hint.

* Update uv lock.

* Change API requests in tests to use local webknossos.

* Experiment with failing tests.

* Remove download from pytest fixture.

* Update test-cassettes and fix some tests.

* Run linter.

* Remove time strings from tests.

* Adapt tests with zarr streaming.

* Working on tests that use annotations.

* Add debugging test mode that starts replay proxy.

* Add fixture for aiohttp use env variables.

* Set l4_sample public for running the remote_mags tests.

* Add cassette files for tests.

* Move access to remote MagViews out of fixture to capture requests in proxay.

* Run linter.

* Update cassette for annotation_upload_download_roundtrip.

* Update readme and contribution guideline.

* Update ci.

* Remove groups from CI.

* Update cassettes.

* Revert changes of ci and add timeout to test.sh.

* Update timeout in test.sh.

* Update test_duration file.

* Adapt test examples.

* Remove unused import.

* Skip flaky tests for now.

* Update tests to use l4_sample dataset.

* Update cassettes.

* Fix test for apply_merger_mode.

* Fix remote_datasets test.

* Fix tests for adding remote mag and layer.

* Run linter and typechecker.

* Fix test learned_segmenter.

--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -99,8 +99,6 @@ dev-dependencies = [
     "mypy ~=1.10.0",
     "pytest ~=8.3.2",
     "pytest-custom-exit-code ~=0.3.0",
-    "pytest-recording ~=0.13.0",
-    "vcrpy ~=6.0",
     "pytest-split ~=0.9.0",
     "pytest-sugar ~=1.0.0",
     "pytest-timeout ~=2.3.0",
@@ -182,7 +180,7 @@ indent-style = "space"
 line-ending = "auto"
 
 [tool.pytest.ini_options]
-markers = ["with_vcr: Runs with VCR recording and optionally blocked network"]
+markers = ["use_proxay: Runs with a proxay instance recording/replaying http responses", "serial"]
 testpaths = ["tests"]
 
 [build-system]
