--- a/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:05 GMT
+        date: Wed, 04 Dec 2024 10:31:10 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"yvUotPhC4JEnt91qbmg3PQ"}'
+        data: '{"token":"o0V9d5CgSMfGuQEu0HWLmA"}'
         compression: none
