--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
     "scipy ~=1.13",
-    "tensorstore ~= 0.1.69",
+    "tensorstore~=0.1.69",
     "typer ~=0.12.5",
     "typing-extensions ~=4.0",
     "universal-pathlib ~=0.2",
@@ -161,7 +161,7 @@ target-version = "py39"
 # PERF = Perflint https://docs.astral.sh/ruff/rules/#perflint-perf
 # FIX = Flake8 fixme https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
 # ARG = Flake8 unused-arguments https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
-select = ["F", "E", "W", "I", "A", "PERF", "FIX", "ARG"]
+select = ["F", "E", "W", "I", "A", "PERF", "FIX", "ARG", "T201"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
