--- a/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_generate_token_for_data_store.yml
@@ -19,13 +19,15 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 27 Nov 2024 19:53:05 GMT
+        date: Wed, 04 Dec 2024 21:42:05 GMT
+        connection: close
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"yvUotPhC4JEnt91qbmg3PQ"}'
+        data: '{"token":"hYnZAlEv7GoxZ7qWqKOCYg"}'
         compression: none
